# ccai-engine

./: README.md  architecture_documentation_index.md  architecture_overhaul.md  architecture_presentation.md  architecture_summary.md  common_knowledge.txt  conversation_manager.md  conversation_memory.json  final_summary.md  implementation_guidelines.md  implementation_roadmap.md  integration_architecture.md  knowledge.txt  knowledge_graph.md  migration_plan.md  next_steps.md  primitives.json  project_management_plan.md  pyproject.toml  setup.py  technical_specification.md  test_knowledge_graph.json  testing_strategy.md  unified_reasoning_core.md
ccai/: run.py
ccai/api/: server.py
ccai/cli/: main.py
ccai/conversation/: __init__.py  context.py  dialog.py  intent.py
ccai/core/: graph.py  models.py  reasoning.py  signal_hub.py
ccai/io/: persistence.py
ccai/llm/: README.md  __init__.py  interface.py  ira_language.py
ccai/nlg/: __init__.py  generator.py  templates.py
ccai/nlp/: extractor.py  parser.py  primitives.py  sentiment.py
ccai/user/: __init__.py  personalization.py  profile.py
docs/: CHATBOT_ARCHITECTURE.md  PROJECT_PLAN.md
graph_data/: snapshot.msgpack  wal.ndjson
ira/: README_CHAT.md  chat_interface.py  run.py  run_knowledge_graph_tests.py
ira/core/: ira_system.py
ira/docs/: CHAT_INTERFACE_FIXES.md  LEARNING_CAPABILITIES.md  reasoning_knowledge_integration_bugfixes.md
ira/examples/: README.md  reasoning_knowledge_integration_demo.py  simple_integration_demo.py
templates/: index.html
tests/: test_extractor.py  test_parser.py
(+76 files in other folders)
